--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -8,6 +8,6 @@
 
 <h2>Technologies Used:</h2>
 
-<%= @portfolio_item.technologies.each do |t| %>
+<% @portfolio_item.technologies.each do |t| %>
 <p><%= t.name %></p>
 <% end %>
